<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:gravity="center">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/title_main_window" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1sp"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"
            android:layout_marginTop="1sp"
            android:layout_weight="0.7"

            android:background="@drawable/rounded_primary"
            android:elevation="5sp"
            android:onClick="startGame"
            android:text="@string/play_text"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <RadioGroup
            android:id="@+id/difficulty"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio-easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/normal_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white"
        android:gravity="top|center"
        android:orientation="vertical"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/highScoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/high_score_text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="70sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold|italic" />



</LinearLayout>